Fixed: EA Tooltip | Longer content changes the alignment to center and creates space below

--- a/assets/front-end/css/tooltip/index.css
+++ b/assets/front-end/css/tooltip/index.css
@@ -226,3 +226,18 @@
     top: 100%;
   }
 }
+.eael-tooltip-text-align-left .eael-tooltip-text {
+  text-align: left;
+}
+
+.eael-tooltip-text-align-right .eael-tooltip-text {
+  text-align: right;
+}
+
+.eael-tooltip-text-align-center .eael-tooltip-text {
+  text-align: center;
+}
+
+.eael-tooltip-text-align-justify .eael-tooltip-text {
+  text-align: justify;
+}
